[fix](test) Replace List.of() with Arrays.asList() for Java 8 compatibility
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>